Fix input length suggester spacing

--- a/app/assets/stylesheets/components/_input-length-suggester.scss
+++ b/app/assets/stylesheets/components/_input-length-suggester.scss
@@ -1,3 +1,7 @@
+.app-c-input-length-suggester {
+  margin-top: govuk-spacing(1);
+}
+
 .app-c-input-length-suggester__hidden {
   visibility: hidden;
 }
